Signed-off-by: lt <925950390@qq.com>

--- a/src/main/webapp/WEB-INF/pages/sys/user_edit.html
+++ b/src/main/webapp/WEB-INF/pages/sys/user_edit.html
@@ -187,6 +187,7 @@
      if(!data)return;
 	 console.log(data);
 	 //初始化用户信息 
+	 debugger
 	 $("#usernameId").val(data.user.username);
 	 $("#deptId").val(data.user.sysDept.name);
 	 console.log("data.user.sysDept.idss="+data.user.sysDept.id);
